# apps/server/internal/ogenserver/gen/oas_parameters_gen.go
@@ -210,6 +210,72 @@ func decodeDeletePromptParams(args [1]string, argsEscaped bool, r *http.Request)
 	return params, nil
 }
 
+// GetApiKeyStatusParams is parameters of getApiKeyStatus operation.
+type GetApiKeyStatusParams struct {
+	// API key UUID (kid claim from JWT).
+	ID string
+}
+
+func unpackGetApiKeyStatusParams(packed middleware.Parameters) (params GetApiKeyStatusParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "id",
+			In:   "path",
+		}
+		params.ID = packed[key].(string)
+	}
+	return params
+}
+
+func decodeGetApiKeyStatusParams(args [1]string, argsEscaped bool, r *http.Request) (params GetApiKeyStatusParams, _ error) {
+	// Decode path: id.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "id",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToString(val)
+				if err != nil {
+					return err
+				}
+
+				params.ID = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "id",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
 // GetOAuthAppCredentialsParams is parameters of getOAuthAppCredentials operation.
 type GetOAuthAppCredentialsParams struct {
 	Provider string
