# apps/server/internal/ogenserver/gen/oas_response_encoders_gen.go
@@ -95,6 +95,39 @@ func encodeGenerateApiKeyResponse(response *GenerateApiKeyResult, w http.Respons
 	return nil
 }
 
+func encodeGetApiKeyStatusResponse(response GetApiKeyStatusRes, w http.ResponseWriter, span trace.Span) error {
+	switch response := response.(type) {
+	case *ApiKeyStatus:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(200)
+		span.SetStatus(codes.Ok, http.StatusText(200))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *ErrorResponse:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(404)
+		span.SetStatus(codes.Error, http.StatusText(404))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	default:
+		return errors.Errorf("unexpected response type: %T", response)
+	}
+}
+
 func encodeGetModuleConfigResponse(response []ModuleConfig, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
